add octocat to GH link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <i class="icofont-github" style="color: #20b38e;"></i>
                     <span data-toggle="counter-up">20</span>
                     <p><strong>Github Repo's</strong> Check out My Github to see some of my projects and code!
-                      <a href="https://github.com/kurtoian13"><img id="git-cat" src="/assets/img/Octocat.png" alt="github-octocat">MY Github</a> </p>
+                      <a href="https://github.com/kurtoian13"><img id="git-cat" src="assets/img/Octocat.png" alt="github-octocat">MY Github</a> </p>
                   </div>
                 </div>
 
