Connect email icon as link fix spelling in content

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <h4>Certifacate in photography and digital Media</h4>
               <h5> Dec. 2009</h5> 
               <p><em>Mcintosh Community college Dover, NH </em></p>
-              <p>Here I earned a Certifacate in photography and digital media, This is where my foundation in design, as well as technical skils began! This was my first introduction to Adobe software as well as HTML.</p>
+              <p>Here I earned a Certifacate in photography and digital media, This is where my foundation in design, as well as technical skills began! This was my first introduction to Adobe software as well as HTML.</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -309,7 +309,7 @@
             <div class="icon-box">
               <div class="icon" ><i class="icofont-dashboard-web"></i></div>
               <h4 class="title"><a href="">Jr. Web development</a></h4>
-              <p class="description">Full Transparicy : I am a aspiring developer, I have just started the road to becoming one. That being said, I do have a fundemental Understanding of .git, Github, React, Express, Mongodb and Node</p>
+              <p class="description">Full Transparicy : I am a aspiring developer, I have just started the road to becoming one. That being said, I do have a basic fundemental understanding of .git, Github, React, Express, Mongodb and Node.</p>
             </div>
           </div>
         
@@ -352,7 +352,7 @@
             <div class="portfolio-info">
               <h4>Marvel Slider Project</h4>
               <p>Dev</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Marvel Slider Project"><i class="bx bx-plus"></i></a>
               <a href="https://kurtoian13.github.io/Marvelslider/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -362,7 +362,7 @@
             <div class="portfolio-info">
               <h4>omnifood.biz</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="omnifood.biz"><i class="bx bx-plus"></i></a>
               <a href="https://www.omnifood.biz/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -372,7 +372,7 @@
             <div class="portfolio-info">
               <h4>CSS animation</h4>
               <p>Dev</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="CSS animation"><i class="bx bx-plus"></i></a>
               <a href="https://kurtoian13.github.io/CSScreditcardanimated/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -382,7 +382,7 @@
             <div class="portfolio-info">
               <h4>Logo Design</h4>
               <p>Design</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Logo Design"><i class="bx bx-plus"></i></a>
               <a href="assets/img/portfolio/portfolio-4.jpg" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -392,7 +392,7 @@
             <div class="portfolio-info">
               <h4>bettyskitchen.com</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="bettyskitchen.com"><i class="bx bx-plus"></i></a>
               <a href="https://www.bettyskitchen.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -402,7 +402,7 @@
             <div class="portfolio-info">
               <h4>Drum Kit (javascript) </h4>
               <p>Dev</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Drum Kit"><i class="bx bx-plus"></i></a>
               <a href="https://kurtoian13.github.io/DrumKit/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -412,7 +412,7 @@
             <div class="portfolio-info">
               <h4>Hand & Neon</h4>
               <p>Design</p>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Hand & Neon"><i class="bx bx-plus"></i></a>
               <a href="assets/img/portfolio/portfolio-7.jpg" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -422,7 +422,7 @@
             <div class="portfolio-info">
               <h4>Trian & Phone</h4>
               <p>design</p>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Trian & Phone"><i class="bx bx-plus"></i></a>
               <a href="assets/img/portfolio/portfolio-8.jpg" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -433,7 +433,7 @@
             <div class="portfolio-info">
               <h4>portraitmodeiphone.com</h4>
               <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="portraitmodeiphone.com"><i class="bx bx-plus"></i></a>
               <a href="https://www.portraitmodeiphone.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -443,7 +443,7 @@
              <div class="portfolio-info">
                <h4>Logo Design</h4>
                <p>design</p>
-               <a href="assets/img/portfolio/portfolio-10.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+               <a href="assets/img/portfolio/portfolio-10.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Logo Design"><i class="bx bx-plus"></i></a>
                <a href="assets/img/portfolio/portfolio-10.jpg" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
              </div>
            </div>
@@ -453,7 +453,7 @@
              <div class="portfolio-info">
                <h4>Drum Kit (javascript) </h4>
                <p>Dev (Javascript Game)</p>
-               <a href="assets/img/portfolio/portfolio-11.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+               <a href="assets/img/portfolio/portfolio-11.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Drum Kit"><i class="bx bx-plus"></i></a>
                <a href="https://kurtoian13.github.io/JavascriptDICE/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
              </div>
            </div>
@@ -463,7 +463,7 @@
              <div class="portfolio-info">
                <h4>adventureawaits.com</h4>
                <p>Web</p>
-               <a href="assets/img/portfolio/portfolio-12.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+               <a href="assets/img/portfolio/portfolio-12.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="adventureawaits.com"><i class="bx bx-plus"></i></a>
                <a href="https://www.adventureawaits.live/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
              </div>
            </div>
@@ -473,7 +473,7 @@
              <div class="portfolio-info">
                <h4>PhotoShop Fun</h4>
                <p>design</p>
-               <a href="assets/img/portfolio/portfolio-13.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+               <a href="assets/img/portfolio/portfolio-13.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="PhotoShop Fun"><i class="bx bx-plus"></i></a>
                <a href="assets/img/portfolio/portfolio-13.jpg" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
              </div>
            </div>
@@ -513,7 +513,8 @@
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                  <i class="bx bx-envelope"></i>
+                  <a href="mailto:kurt.oian@gmail.com" target="_top">
+                    <i class="bx bx-envelope"></i></a>
                   <h3>Email Me</h3>
                   <p>kurt.oian@gmail.com</p>
                 </div>
