Remove h1 middle name hero section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1 class="hover-ko">Kurt Magne Oian</h1>
+      <h1 class="hover-ko">Kurt Oian</h1>
       <h2 class="hover-ko">I'm a Jr. Graphic/ Web Designer & Web development student</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
