--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <h4> Working Towward my Certifacte in web development </h4>
               <h5>2020 - 2021</h5>
               <p><em> udemy.com "Complete web developer bootcamp 2020" (m.e.r.n. stack)</em></p>
-              <p>I am currently 3/4 of the way threw my Certifacate In Development/ Design. This intensive bootcamp Gave me a deeper understanding of HTML, CSS, basic Jquery and JavaScript used in web development. As well as a good amount of exposure to Mongodb, Express.js, React, and Node. I believe in being completly transparent, that being said, I realize I have just scratched the surface on full stack development. Front end Design/ Development is where my strenght is, and even in this I know I still have a lot to learn! </p>
+              <p>I am currently 3/4 of the way threw my Certifacate In Development/ Design. This intensive bootcamp gave me a deeper understanding of HTML, CSS, basic Jquery and JavaScript used in web development. As well as a good amount of exposure to Mongodb, Express.js, React, and Node. I believe in being completly transparent, that being said, I realize I have just scratched the surface on full stack development. Front end Design/ Development is where my strenght is, and even in this I know I still have a lot to learn! </p>
             </div>
             <div class="resume-item">
               <h4>Certiface of completion</h4>
