Add refrances to resume

--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
                   <li>Delegate tasks to the 7 members of the Sales and internet team. </li>
                   <li>Supervise The sale of new and pre-owned Harley-Davidson Motorcycles, ensuring all goals and deadlines were completed on time</li>
                   <li>Reason for leaveing: When the covid-19 pandemic hit my wife was 8 1/2 months pregnant and considerd high-risk, I made the decesion to leave on good terms and be there for my family. Then I found UI / UX design and decided to pursue my education. I knew from my first course that I had a passion for design and Code and have not looked back since! </li>
+                  <li>Refrance : Brandi Bemis (General Manager) 1 603 769 9102</li>
+                  <li>Refrance : Adam Marasca (Sales Manager) 1 978 580 7337</li>
+                  <li>Refrance : John Palotore (Internet Sales Manager) 1 603 501 9881</li>
                 </ul>
               </p>
             </div>
@@ -257,6 +260,7 @@
                   <li>This was a small freelance photography/ multi-media design company I started with a friend.</li>
                   <li>Shoot, edit, design and deliver clients exceptional digatal and print assets.</li>
                   <li>Daily Use of the ADOBE creative suite, Mainly Photoshop, Lightroom, Illistrator, and some InDesign</li>
+                  <li>Refrance : AJ Kolovatos ( business partner ) 1 603 996 1788</li>
                 </ul>
               </p>
             </div>
