Add about me content text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>I am a Jr. design and development student looking for an opportunity to gain hands on, real world experience.</p>
+          <p>I am a Jr. design and development student looking for an opportunity to gain hands on, real world experience. I am self taught, for the most part. I have also earned Certificates from Udemy.com. I believe my background in photography gives me my fundamental skill set in design, and my dedication to learning and always improving myself gave me my base in development. I am dedicated, hard working, and love being a part of a team. Although my background is in sales, my true passion is design.  </p>
         </div>
 
         <div class="row">
@@ -559,7 +559,7 @@
            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-18.jpg"class="img-fluid" alt=""></div>
              <div class="portfolio-info">
-               <h4>techie Mugs.com</h4>
+               <h4>Techie Mugs.com</h4>
                <p>Web (a fully functioning Wordpress E-com site!)</p>
                <!-- <a href="assets/img/portfolio/portfolio-17.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="adventureawaits.com"><i class="bx bx-plus"></i></a> -->
                <a href="https://www.techiemugs.com" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
