Edit about content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>I am a Jr. design and development student looking for an opportunity to gain hands on, real world experience. I am self taught, for the most part. I have also earned Certificates from Udemy.com. I believe my background in photography gives me my fundamental skill set in design, and my dedication to learning and always improving myself gave me my base in development. I am dedicated, hard working, and love being a part of a team. Although my background is in sales, my true passion is design.  </p>
+          <p>I am a Jr. design and development student looking for an opportunity to gain hands on, real world experience. I am self taught, for the most part. I have also earned Certificates from Udemy.com. I believe my background in photography gives me my fundamental skill set in design, and my dedication to learning and always improving myself gave me my base in development. I am dedicated, hard working, and love being a part of a team.   </p>
         </div>
 
         <div class="row">
