Add text to services section

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="icon-box">
               <div class="icon"><i class="icofont-web"></i></div>
               <h4 class="title">Front End Web Design</h4>
-              <p class="description">Simple static websites from start to finish. I have worked with Bootstrap, HTML, CSS, Jquery and basic Javascript. </p>
+              <p class="description">Simple static websites from start to finish. I have worked with Bootstrap, Wordpress, HTML, CSS, Jquery and basic Javascript. </p>
             </div>
           </div>
         
