Add link to my site

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Kurt Oian</li>
-                    <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a href="https://kurtoian13.github.io/Porfolio-Resume/"> www.ko-design-dev.com</li></a>
+                    <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a href="https://wwww.ko-design-dev.com"> www.ko-design-dev.com</li></a>
                     <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +603 777 7106</li>
                     <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Newmarket NH, USA</li>
                   </ul>
